--- a/app/components/sketchpad/sketchpad.css
+++ b/app/components/sketchpad/sketchpad.css
@@ -8,6 +8,13 @@
 	margin-bottom: 0;
 }
 
+.sketch-pages {
+	cursor: default;
+	float: left;
+	margin-left: 15px;
+	margin-top: 3px;
+}
+
 .sketch-input-group {
 	width: 100px;
 	display: inline-table;
