--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -84,7 +84,7 @@ body {
 
 .btn {
 	font-family: 'Open Sans', sans-serif;
-	box-shadow: 1px 0px 2px rgba(60, 60, 60, 1), inset 1px 0px 2px rgba(160, 160, 160, 1);
+	box-shadow: 0.5px 0px 1px rgba(60, 60, 60, 1), inset 0.5px 0px 1px rgba(160, 160, 160, 1);
 }
 
 .btn-primary {
@@ -264,4 +264,11 @@ body {
 
 .Presentation .katex {
 	font: normal 2.21rem KaTeX_Main,Times New Roman,serif;
+}
+
+.modal-container {
+	position: relative;
+}
+.modal-container .modal, .modal-container .modal-backdrop {
+	position: absolute;
 }
