Add ability to overlay nodes

--- a/app/components/sketchpad/sketchpad.css
+++ b/app/components/sketchpad/sketchpad.css
@@ -43,3 +43,11 @@
 .sketch-text-input:focus{
 	outline: none;
 }
+
+.sketch-node-container {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
+	z-index: 2;
+}
