--- a/app/components/sketchpad/sketchpad.css
+++ b/app/components/sketchpad/sketchpad.css
@@ -47,7 +47,7 @@
 .sketch-node-container {
 	position: absolute;
 	left: 50%;
-	top: 50%;
-	transform: translate(-50%,-50%);
+	top: 3%;
+	transform: translate(-50%);
 	z-index: 2;
 }
