Update multiple-choice question

--- a/app/components/multiple-choice-question/multiple-choice-styles.css
+++ b/app/components/multiple-choice-question/multiple-choice-styles.css
@@ -15,6 +15,10 @@
 	line-height: 22px !important;
 }
 
+.question {
+	white-space: pre-line;
+}
+
 .question label {
 	font-weight: 600;
 	font-stretch: extra-expanded;
