Disable touch events

--- a/app/components/sketchpad/sketchpad.css
+++ b/app/components/sketchpad/sketchpad.css
@@ -17,6 +17,11 @@
 	float: left;
 }
 
+.sketch-canvas {
+	cursor: crosshair;
+	touch-action: none;
+}
+
 .unselectable {
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
