--- a/app/components/news/styles.css
+++ b/app/components/news/styles.css
@@ -1,10 +1,10 @@
 .article-container {
 	position: fixed;
-	height: 94%;
+	height: min-content;
 	left: 50%;
-	top: 3%;
+	top: 10%;
 	overflow: hidden;
-	z-index: 1;
+	z-index: 999;
 }
 
 .article-header {
