--- a/components/plotly.html
+++ b/components/plotly.html
@@ -1656,10 +1656,16 @@
 <span class="token operator">/</span><span class="token operator">&gt;</span>
 </code></pre>
 <p><a href="https://isle.heinz.cmu.edu/components/plotly" target="_blank">Open interactive preview</a></p>
-<h4 id="options">Options</h4>
+<h4 id="options">Options:</h4>
 <ul>
-<li><strong>data</strong>:  An array of arrays of type <code>data</code> with various tags. These tags mirror the <code>plotly</code> functionality in the R wrapper for the HTML syntax.</li>
-<li><strong>layout</strong>: An array of dimension attributes.</li>
+<li><strong>data</strong> | <code>array (required)</code>: undefined. Default: <code>none</code>.</li>
+<li><strong>editable</strong> | <code>boolean</code>: undefined. Default: <code>false</code>.</li>
+<li><strong>id</strong> | <code>string</code>: undefined. Default: <code>none</code>.</li>
+<li><strong>layout</strong> | <code>object</code>: undefined. Default: <code>{}</code>.</li>
+<li><strong>legendButtons</strong> | <code>boolean</code>: undefined. Default: <code>true</code>.</li>
+<li><strong>onShare</strong> | <code>function</code>: undefined. Default: <code>none</code>.</li>
+<li><strong>removeButtons</strong> | <code>boolean</code>: undefined. Default: <code>false</code>.</li>
+<li><strong>toggleFullscreen</strong> | <code>boolean</code>: undefined. Default: <code>true</code>.</li>
 </ul>
 
                                 
@@ -1704,7 +1710,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Plotly","level":"1.4.19.4","depth":3,"next":{"title":"R Plot","level":"1.4.19.5","depth":3,"path":"components/r/plot.md","ref":"components/r/plot.md","articles":[]},"previous":{"title":"d3-tree","level":"1.4.19.3","depth":3,"path":"components/tree-plot.md","ref":"components/tree-plot.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/plotly.md","mtime":"2018-01-04T16:19:35.551Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-08-23T17:48:51.408Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Plotly","level":"1.4.19.4","depth":3,"next":{"title":"R Plot","level":"1.4.19.5","depth":3,"path":"components/r/plot.md","ref":"components/r/plot.md","articles":[]},"previous":{"title":"d3-tree","level":"1.4.19.3","depth":3,"path":"components/tree-plot.md","ref":"components/tree-plot.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/plotly.md","mtime":"2018-08-24T03:15:54.539Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-08-24T03:17:01.224Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
