--- a/components/word-cloud.html
+++ b/components/word-cloud.html
@@ -1645,6 +1645,42 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="word-cloud">Word Cloud</h1>
+<p>A word cloud component built on top of <a href="https://github.com/jasondavies/d3-cloud" target="_blank">d3-cloud</a>.</p>
+<h4 id="example">Example:</h4>
+<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>WordCloud data<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">[</span>
+    <span class="token string">&apos;This is my holiday&apos;</span><span class="token punctuation">,</span> 
+    <span class="token string">&apos;Breakfast is great&apos;</span><span class="token punctuation">,</span> 
+    <span class="token string">&apos;My house is my castle&apos;</span><span class="token punctuation">,</span> 
+    <span class="token string">&apos;A castle for a kingdom&apos;</span><span class="token punctuation">,</span> 
+    <span class="token string">&apos;I am longing for breakfast&apos;</span><span class="token punctuation">,</span>
+    <span class="token string">&apos;Having rolls for breakfast is a must&apos;</span><span class="token punctuation">,</span>
+    <span class="token string">&apos;A horse for a kingdom&apos;</span><span class="token punctuation">,</span>
+    <span class="token string">&apos;Mom like rolls&apos;</span><span class="token punctuation">,</span>
+    <span class="token string">&apos;Orange juice is fine&apos;</span><span class="token punctuation">,</span>
+    <span class="token string">&apos;Where is the butter&apos;</span><span class="token punctuation">,</span>
+    <span class="token string">&apos;I am looking for a spoon&apos;</span><span class="token punctuation">,</span>
+    <span class="token string">&apos;Coffee for coffee drinkers&apos;</span><span class="token punctuation">,</span>
+    <span class="token string">&apos;Tea for the sleepy ones&apos;</span><span class="token punctuation">,</span>
+    <span class="token string">&apos;The sleepy, sloppy, crazy King lives in a castle&apos;</span><span class="token punctuation">,</span>
+    <span class="token string">&apos;A house for everybody&apos;</span>
+<span class="token punctuation">]</span><span class="token punctuation">}</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
+</code></pre>
+<p><a href="https://isle.heinz.cmu.edu/components/word-cloud/" target="_blank">Open interactive preview</a></p>
+<h4 id="options">Options:</h4>
+<ul>
+<li><strong>data</strong> | <code>array</code>: either an array of texts from which to generate the word cloud or, if <code>precalculated</code> is set to <code>true</code>, and array of word count objects (with <code>text</code> and <code>value</code> keys). Default: <code>[]</code>.</li>
+<li><strong>font</strong> | <code>(string|function)</code>: accessor function specifying the font face for each word. Also accepts a constant instead of a function. Default: <code>&apos;serif&apos;</code>.</li>
+<li><strong>fontSizeMapper</strong> | <code>function</code>: accessor function indicating the font size for each word. Defaults to <code>( count - min ) / ( max - min ) * 36.0 + 14.0</code>, where <code>min</code> and <code>max</code> denote the minimum and maximum word <code>counts</code>, respectively. Default: <code>none</code>.</li>
+<li><strong>height</strong> | <code>number</code>: height of the word clloud (in px). Default: <code>600</code>.</li>
+<li><strong>language</strong> | <code>string</code>: language identifier (determines the stopwords to be removed). Default: <code>&apos;en&apos;</code>.</li>
+<li><strong>minCount</strong> | <code>number</code>: if set, only include words that appear more than <code>minCount</code> times in the given data. Default: <code>none</code>.</li>
+<li><strong>saveButton</strong> | <code>boolean</code>: controls whether to display a button for saving the word cloud as an image. Default: <code>true</code>.</li>
+<li><strong>onClick</strong> | <code>function</code>: callback function invoked when a word on the word cloud is clicked. Default: <code>onClick() {}</code>.</li>
+<li><strong>padding</strong> | <code>number</code>: accessor function indicating the numerical padding for each word. Default: <code>5</code>.</li>
+<li><strong>precalculated</strong> | <code>boolean</code>: controls whether the word cloud expects an array of precalculated word counts or will generate them for given texts. Default: <code>false</code>.</li>
+<li><strong>rotate</strong> | <code>function</code>: accessor function indicating the rotation angle (in degrees) for each word. Also accepts a constant instead of a function. Default: <code>word =&gt; word.value % 360</code>.</li>
+<li><strong>width</strong> | <code>number</code>: width of the word cloud (in px). Default: <code>700</code>.</li>
+</ul>
 
                                 
                                 </section>
@@ -1688,7 +1724,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Word Cloud","level":"1.4.19.7","depth":3,"next":{"title":"Sketchpad","level":"1.4.20","depth":2,"path":"components/sketchpad.md","ref":"components/sketchpad.md","articles":[]},"previous":{"title":"Victory","level":"1.4.19.6","depth":3,"path":"components/victory.md","ref":"components/victory.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/word-cloud.md","mtime":"2017-12-30T12:51:41.989Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-08-23T17:48:51.408Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Word Cloud","level":"1.4.19.7","depth":3,"next":{"title":"Sketchpad","level":"1.4.20","depth":2,"path":"components/sketchpad.md","ref":"components/sketchpad.md","articles":[]},"previous":{"title":"Victory","level":"1.4.19.6","depth":3,"path":"components/victory.md","ref":"components/victory.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/word-cloud.md","mtime":"2018-08-24T03:15:54.555Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-08-24T03:17:01.224Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
