--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -54,7 +54,7 @@ body {
 	font-size: 16px !important;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 15px;
+	padding: 20px 15px 5px 15px;
 	width: 100%;
 	height: 100%;
 	display: block;
