--- a/components/playground.html
+++ b/components/playground.html
@@ -61,7 +61,7 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="spinner.html" />
+    <link rel="next" href="timer.html" />
     
     
     <link rel="prev" href="js-shell.html" />
@@ -937,20 +937,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18.6" data-path="spinner.html">
-            
-                <a href="spinner.html">
-            
-                    
-                    Spinner
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.18.7" data-path="timer.html">
+        <li class="chapter " data-level="1.4.18.6" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -1404,7 +1391,7 @@
                 </a>
                 
                 
-                <a href="spinner.html" class="navigation navigation-next " aria-label="Next page: Spinner">
+                <a href="timer.html" class="navigation navigation-next " aria-label="Next page: Timer">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1415,7 +1402,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Playground","level":"1.4.18.5","depth":3,"next":{"title":"Spinner","level":"1.4.18.6","depth":3,"path":"components/spinner.md","ref":"components/spinner.md","articles":[]},"previous":{"title":"JSShell","level":"1.4.18.4","depth":3,"path":"components/js-shell.md","ref":"components/js-shell.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/playground.md","mtime":"2018-09-10T14:04:52.038Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T16:50:12.554Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Playground","level":"1.4.18.5","depth":3,"next":{"title":"Timer","level":"1.4.18.6","depth":3,"path":"components/timer.md","ref":"components/timer.md","articles":[]},"previous":{"title":"JSShell","level":"1.4.18.4","depth":3,"path":"components/js-shell.md","ref":"components/js-shell.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/playground.md","mtime":"2018-09-10T16:59:47.688Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T17:00:39.001Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
