--- a/components/runner.html
+++ b/components/runner.html
@@ -937,20 +937,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18.6" data-path="spinner.html">
-            
-                <a href="spinner.html">
-            
-                    
-                    Spinner
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.18.7" data-path="timer.html">
+        <li class="chapter " data-level="1.4.18.6" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -1342,7 +1329,7 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="runner">Runner</h1>
-<p>Description is missing.</p>
+<p>The runner component will execute a supplied function either once or at a given interval.</p>
 <h4 id="example">Example:</h4>
 <pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>Runner
     interval<span class="token operator">=</span><span class="token punctuation">{</span><span class="token number">2000</span><span class="token punctuation">}</span>
@@ -1399,7 +1386,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Runner","level":"1.4.13","depth":2,"next":{"title":"R","level":"1.4.14","depth":2,"path":"chapters/r.md","ref":"chapters/r.md","articles":[{"title":"R Help","level":"1.4.14.1","depth":3,"path":"components/r/help.md","ref":"components/r/help.md","articles":[]},{"title":"R Output","level":"1.4.14.2","depth":3,"path":"components/r/output.md","ref":"components/r/output.md","articles":[]},{"title":"R Plot","level":"1.4.14.3","depth":3,"path":"components/r/plot.md","ref":"components/r/plot.md","articles":[]},{"title":"R Shell","level":"1.4.14.4","depth":3,"path":"components/r/shell.md","ref":"components/r/shell.md","articles":[]},{"title":"R Table","level":"1.4.14.5","depth":3,"path":"components/r/table.md","ref":"components/r/table.md","articles":[]}]},"previous":{"title":"Revealer","level":"1.4.12","depth":2,"path":"components/revealer.md","ref":"components/revealer.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/runner.md","mtime":"2018-09-10T14:04:52.050Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T16:50:12.554Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Runner","level":"1.4.13","depth":2,"next":{"title":"R","level":"1.4.14","depth":2,"path":"chapters/r.md","ref":"chapters/r.md","articles":[{"title":"R Help","level":"1.4.14.1","depth":3,"path":"components/r/help.md","ref":"components/r/help.md","articles":[]},{"title":"R Output","level":"1.4.14.2","depth":3,"path":"components/r/output.md","ref":"components/r/output.md","articles":[]},{"title":"R Plot","level":"1.4.14.3","depth":3,"path":"components/r/plot.md","ref":"components/r/plot.md","articles":[]},{"title":"R Shell","level":"1.4.14.4","depth":3,"path":"components/r/shell.md","ref":"components/r/shell.md","articles":[]},{"title":"R Table","level":"1.4.14.5","depth":3,"path":"components/r/table.md","ref":"components/r/table.md","articles":[]}]},"previous":{"title":"Revealer","level":"1.4.12","depth":2,"path":"components/revealer.md","ref":"components/revealer.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/runner.md","mtime":"2018-09-10T17:00:23.400Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T17:00:39.001Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
