--- a/components/survey-generator.html
+++ b/components/survey-generator.html
@@ -937,20 +937,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18.6" data-path="spinner.html">
-            
-                <a href="spinner.html">
-            
-                    
-                    Spinner
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.18.7" data-path="timer.html">
+        <li class="chapter " data-level="1.4.18.6" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -1342,6 +1329,15 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="survey-generator">Survey Generator</h1>
+<p>Allows instructors to create multiple-choice surveys, free text surveys and number surveys on the fly in real-time through an easy-to-use interface.</p>
+<h4 id="example">Example:</h4>
+<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>SurveyGenerator id<span class="token operator">=</span><span class="token string">&quot;my_survey&quot;</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
+</code></pre>
+<p><a href="https://isle.heinz.cmu.edu/components/survey-generator/" target="_blank">Open interactive preview</a></p>
+<h4 id="options">Options:</h4>
+<ul>
+<li><strong>id</strong> | <code>string (required)</code>: component identifier. Default: <code>none</code>.</li>
+</ul>
 
                                 
                                 </section>
@@ -1385,7 +1381,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Survey Generator","level":"1.4.17.4","depth":3,"next":{"title":"Helper","level":"1.4.18","depth":2,"path":"chapters/helper.md","ref":"chapters/helper.md","articles":[{"title":"Clock","level":"1.4.18.1","depth":3,"path":"components/clock.md","ref":"components/clock.md","articles":[]},{"title":"Color Picker","level":"1.4.18.2","depth":3,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},{"title":"Date Range Picker","level":"1.4.18.3","depth":3,"path":"components/date-range-picker.md","ref":"components/date-range-picker.md","articles":[]},{"title":"JSShell","level":"1.4.18.4","depth":3,"path":"components/js-shell.md","ref":"components/js-shell.md","articles":[]},{"title":"Playground","level":"1.4.18.5","depth":3,"path":"components/playground.md","ref":"components/playground.md","articles":[]},{"title":"Spinner","level":"1.4.18.6","depth":3,"path":"components/spinner.md","ref":"components/spinner.md","articles":[]},{"title":"Timer","level":"1.4.18.7","depth":3,"path":"components/timer.md","ref":"components/timer.md","articles":[]}]},"previous":{"title":"Proportions Survey","level":"1.4.17.3","depth":3,"path":"components/proportions-survey.md","ref":"components/proportions-survey.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/survey-generator.md","mtime":"2018-09-10T14:04:52.062Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T16:50:12.554Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Survey Generator","level":"1.4.17.4","depth":3,"next":{"title":"Helper","level":"1.4.18","depth":2,"path":"chapters/helper.md","ref":"chapters/helper.md","articles":[{"title":"Clock","level":"1.4.18.1","depth":3,"path":"components/clock.md","ref":"components/clock.md","articles":[]},{"title":"Color Picker","level":"1.4.18.2","depth":3,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},{"title":"Date Range Picker","level":"1.4.18.3","depth":3,"path":"components/date-range-picker.md","ref":"components/date-range-picker.md","articles":[]},{"title":"JSShell","level":"1.4.18.4","depth":3,"path":"components/js-shell.md","ref":"components/js-shell.md","articles":[]},{"title":"Playground","level":"1.4.18.5","depth":3,"path":"components/playground.md","ref":"components/playground.md","articles":[]},{"title":"Timer","level":"1.4.18.6","depth":3,"path":"components/timer.md","ref":"components/timer.md","articles":[]}]},"previous":{"title":"Proportions Survey","level":"1.4.17.3","depth":3,"path":"components/proportions-survey.md","ref":"components/proportions-survey.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/survey-generator.md","mtime":"2018-09-10T16:59:47.712Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T17:00:39.001Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
