--- a/app/components/timer/timer.css
+++ b/app/components/timer/timer.css
@@ -2,13 +2,13 @@
 	position: fixed;
 	top: 0;
 	right: 0;
-	margin-top: 100;
-	margin-right: 25;
+	margin-top: 10px;
+	margin-right: 25px;
 	z-index: 9999;
-	font-size: 24;
+	font-size: 24px;
 	color: white;
-	background-color: '#383D48';
-	padding-left: 10;
-	padding-right: 10;
-	border-radius: 3;
+	background-color: #383D48;
+	padding-left: 10px;
+	padding-right: 10px;
+	border-radius: 3px;
 }
