--- a/app/components/recorder/recorder.css
+++ b/app/components/recorder/recorder.css
@@ -6,7 +6,6 @@
 	text-align: right;
 	min-width: 120px;
 	z-index: 1002;
-	background: rgba(0, 80,255,0.5);
 	box-shadow: 2px 2px 10px black;
 	cursor: default;
 }
@@ -28,7 +27,7 @@
 	top: 8px;
 	width: 30px;
 	height: 30px;
-	right: 80px;
+	right: 0px;
 }
 
 .recorder-button-container:hover {
@@ -39,7 +38,8 @@
 	font-family: Arial;
 	font-size: 30px;
 	font-weight: 800;
-	margin-right: 8px;
+	padding-right: 80px;
+	background: rgba(0, 80,255,0.5);
 }
 
 .recorder-button {
