--- a/app/components/feedback/feedback.css
+++ b/app/components/feedback/feedback.css
@@ -7,7 +7,6 @@
 
 .icon:hover {
 	opacity: 1;
-	cursor: pointer;
 	outline: none;
 }
 
@@ -17,6 +16,7 @@
 }
 
 .feedback-button {
+	cursor: pointer;
 	fill: rgba(92,92,92,0.6);
 	transition: 0.3;
 	border:solid 1px rgba(92,92,92,0.4);
@@ -27,4 +27,11 @@
 	transition: 0.3;
 	border:solid 1px #ca5800;
 	fill: #ca5800;
+}
+
+.feedback-button-disabled {
+	fill: rgba(92,92,92,0.6);
+	transition: 0.3;
+	border:solid 1px rgba(92,92,92,0.4);
+	margin-right: 1px;
 }
