--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -217,11 +217,13 @@ body {
 }
 
 .unselectable {
-	-moz-user-select: -moz-none;
-	-khtml-user-select: none;
+	-webkit-touch-callout: none;
 	-webkit-user-select: none;
-	-o-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
+	cursor: default;
 }
 
 .example-multiple-targets::after {
