--- a/components/text.html
+++ b/components/text.html
@@ -61,10 +61,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="video-player.html" />
+    <link rel="next" href="news.html" />
     
     
-    <link rel="prev" href="recorder.html" />
+    <link rel="prev" href="realtime-metrics.md" />
     
 
     </head>
@@ -787,9 +787,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.16" data-path="../chapters/group-interaction.md">
+        <li class="chapter " data-level="1.4.16" data-path="../chapters/surveys.html">
             
-                <span>
+                <a href="../chapters/surveys.html">
             
                     
                     Surveys
@@ -827,7 +827,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.16.3" data-path="proportions-survey.html">
+        <li class="chapter " data-level="1.4.16.3" data-path="multiple-choice-survey.md">
+            
+                <span>
+            
+                    
+                    Muliple Choice Survey
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.16.4" data-path="proportions-survey.html">
             
                 <a href="proportions-survey.html">
             
@@ -840,7 +853,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.16.4" data-path="survey-generator.html">
+        <li class="chapter " data-level="1.4.16.5" data-path="survey-generator.html">
             
                 <a href="survey-generator.html">
             
@@ -955,12 +968,12 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18" data-path="../chapters/media.html">
+        <li class="chapter " data-level="1.4.18" data-path="../chapters/general.html">
             
-                <a href="../chapters/media.html">
+                <a href="../chapters/general.html">
             
                     
-                    Media
+                    General
             
                 </a>
             
@@ -1021,7 +1034,33 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.18.5" data-path="text.html">
+        <li class="chapter " data-level="1.4.18.5" data-path="db-metrics.md">
+            
+                <span>
+            
+                    
+                    Metric
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.18.6" data-path="realtime-metrics.md">
+            
+                <span>
+            
+                    
+                    RealTimeMetrics
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter active" data-level="1.4.18.7" data-path="text.html">
             
                 <a href="text.html">
             
@@ -1034,7 +1073,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18.6" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.18.8" data-path="news.html">
+            
+                <a href="news.html">
+            
+                    
+                    News
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.18.9" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -1047,44 +1099,12 @@
             
         </li>
     
-
-            </ul>
+        <li class="chapter " data-level="1.4.18.10" data-path="wikipedia.html">
             
-        </li>
-    
-        <li class="chapter " data-level="1.4.19" data-path="../chapters/metrics.html">
-            
-                <a href="../chapters/metrics.html">
+                <a href="wikipedia.html">
             
                     
-                    Metrics
-            
-                </a>
-            
-
-            
-            <ul class="articles">
-                
-    
-        <li class="chapter " data-level="1.4.19.1" data-path="db-metrics.md">
-            
-                <span>
-            
-                    
-                    DB
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.19.2" data-path="realtime-metrics.md">
-            
-                <span>
-            
-                    
-                    Realtime
+                    Wikipedia
             
                 </a>
             
@@ -1097,7 +1117,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20" data-path="../chapters/plot.html">
+        <li class="chapter " data-level="1.4.19" data-path="../chapters/plot.html">
             
                 <a href="../chapters/plot.html">
             
@@ -1111,7 +1131,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.20.1" data-path="density-plot.html">
+        <li class="chapter " data-level="1.4.19.1" data-path="density-plot.html">
             
                 <a href="density-plot.html">
             
@@ -1124,7 +1144,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20.2" data-path="network-plot.md">
+        <li class="chapter " data-level="1.4.19.2" data-path="network-plot.md">
             
                 <span>
             
@@ -1137,7 +1157,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20.3" data-path="tree-plot.md">
+        <li class="chapter " data-level="1.4.19.3" data-path="tree-plot.md">
             
                 <span>
             
@@ -1150,7 +1170,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20.4" data-path="plotly.html">
+        <li class="chapter " data-level="1.4.19.4" data-path="plotly.html">
             
                 <a href="plotly.html">
             
@@ -1163,7 +1183,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20.5" data-path="r/plot.html">
+        <li class="chapter " data-level="1.4.19.5" data-path="r/plot.html">
             
                 <a href="r/plot.html">
             
@@ -1176,7 +1196,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20.6" data-path="victory.html">
+        <li class="chapter " data-level="1.4.19.6" data-path="victory.html">
             
                 <a href="victory.html">
             
@@ -1189,7 +1209,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20.7" data-path="word-cloud.html">
+        <li class="chapter " data-level="1.4.19.7" data-path="word-cloud.html">
             
                 <a href="word-cloud.html">
             
@@ -1207,7 +1227,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.21" data-path="../chapters/spectacle.html">
+        <li class="chapter " data-level="1.4.20" data-path="../chapters/spectacle.html">
             
                 <a href="../chapters/spectacle.html">
             
@@ -1217,51 +1237,6 @@
                 </a>
             
 
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.22" data-path="../chapters/web-service.html">
-            
-                <a href="../chapters/web-service.html">
-            
-                    
-                    Web Service
-            
-                </a>
-            
-
-            
-            <ul class="articles">
-                
-    
-        <li class="chapter " data-level="1.4.22.1" data-path="news.html">
-            
-                <a href="news.html">
-            
-                    
-                    News
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.22.2" data-path="wikipedia.html">
-            
-                <a href="wikipedia.html">
-            
-                    
-                    Wikipedia
-            
-                </a>
-            
-
-            
-        </li>
-    
-
-            </ul>
             
         </li>
     
@@ -1374,12 +1349,12 @@
 
             
                 
-                <a href="recorder.html" class="navigation navigation-prev " aria-label="Previous page: Recorder">
+                <a href="realtime-metrics.md" class="navigation navigation-prev " aria-label="Previous page: RealTimeMetrics">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="video-player.html" class="navigation navigation-next " aria-label="Next page: Video Player">
+                <a href="news.html" class="navigation navigation-next " aria-label="Next page: News">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1390,7 +1365,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Text","level":"1.4.18.5","depth":3,"next":{"title":"Video Player","level":"1.4.18.6","depth":3,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]},"previous":{"title":"Recorder","level":"1.4.18.4","depth":3,"path":"components/recorder.md","ref":"components/recorder.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/text.md","mtime":"2018-10-08T00:58:44.538Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T01:04:00.394Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Text","level":"1.4.18.7","depth":3,"next":{"title":"News","level":"1.4.18.8","depth":3,"path":"components/news.md","ref":"components/news.md","articles":[]},"previous":{"title":"RealTimeMetrics","level":"1.4.18.6","depth":3,"path":"components/realtime-metrics.md","ref":"components/realtime-metrics.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/text.md","mtime":"2018-10-08T00:58:44.538Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T01:09:42.445Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
