--- a/components/multiple-choice-survey.html
+++ b/components/multiple-choice-survey.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>Switch · ISLE Editor Documentation</title>
+        <title>Muliple Choice Survey · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -61,10 +61,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="unveil.md" />
+    <link rel="next" href="proportions-survey.html" />
     
     
-    <link rel="prev" href="slider.html" />
+    <link rel="prev" href="number-survey.html" />
     
 
     </head>
@@ -730,7 +730,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.9.10" data-path="switch.html">
+        <li class="chapter " data-level="1.4.9.10" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -801,7 +801,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.10.3" data-path="multiple-choice-survey.html">
+        <li class="chapter active" data-level="1.4.10.3" data-path="multiple-choice-survey.html">
             
                 <a href="multiple-choice-survey.html">
             
@@ -1327,7 +1327,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >Switch</a>
+        <a href=".." >Muliple Choice Survey</a>
     </h1>
 </div>
 
@@ -1342,22 +1342,26 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="switch-components">Switch Components</h1>
-<p>The Switch component allows the display of one element out of a list of several elements. Users can cycle through the different children of the Switch tag by clicking on the currently displayed one.</p>
+                                <h1 id="multiple-choice-survey">Multiple Choice Survey</h1>
+<p>A survey component in which the instructor may collect multiple-choice survey data from students in real-time.</p>
 <h4 id="example">Example:</h4>
-<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>Switch<span class="token operator">&gt;</span>
-    <span class="token operator">&lt;</span>span<span class="token operator">&gt;</span>Option <span class="token number">1</span><span class="token operator">&lt;</span><span class="token operator">/</span>span<span class="token operator">&gt;</span>
-    <span class="token operator">&lt;</span>span<span class="token operator">&gt;</span>Option <span class="token number">2</span><span class="token operator">&lt;</span><span class="token operator">/</span>span<span class="token operator">&gt;</span>
-<span class="token operator">&lt;</span><span class="token operator">/</span>Switch<span class="token operator">&gt;</span>
+<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>MultipleChoiceSurvey
+    anonymous
+    question<span class="token operator">=</span><span class="token string">&quot;Are you left- or right-handed&quot;</span>
+    answers<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">[</span> <span class="token string">&apos;Left-handed&apos;</span><span class="token punctuation">,</span> <span class="token string">&apos;Right-handed&apos;</span> <span class="token punctuation">]</span><span class="token punctuation">}</span><span class="token operator">/</span><span class="token operator">&gt;</span>
+<span class="token operator">/</span><span class="token operator">&gt;</span>
 </code></pre>
-<p><a href="https://isle.heinz.cmu.edu/components/switch/" target="_blank">Open interactive preview</a></p>
+<p><a href="https://isle.heinz.cmu.edu/components/multiple-choice-survey" target="_blank">Open interactive preview</a></p>
 <h4 id="options">Options:</h4>
 <ul>
-<li><strong>tooltip</strong> | <code>string</code>: tooltip displayed when hovering over the switch element. Default: <code>&apos;Click to cycle through available options.&apos;</code>.</li>
-<li><strong>tooltipPos</strong> | <code>string</code>: placement of the tooltip (either <code>top</code>, <code>left</code>, <code>right</code>, or <code>bottom</code>). Default: <code>&apos;top&apos;</code>.</li>
-<li><strong>className</strong> | <code>string</code>: class name for the enclosing span element. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>style</strong> | <code>object</code>: CSS inline styles. Default: <code>{}</code>.</li>
-<li><strong>onChange</strong> | <code>function</code>: callback invoked when elements are switched. Receives as its first argument the index of the currently displayed child. Default: <code>onChange() {}</code>.</li>
+<li><strong>id</strong> | <code>string (required)</code>: undefined. Default: <code>none</code>.</li>
+<li><strong>allowMultipleAnswers</strong> | <code>boolean</code>: contols whether one wishes to allow students to answer the survey multiple times. Default: <code>false</code>.</li>
+<li><strong>anonymous</strong> | <code>boolean</code>: contols whether student answers are anonymized. Default: <code>false</code>.</li>
+<li><strong>answers</strong> | <code>array</code>: array indicating answer choices for the students. Default: <code>[]</code>.</li>
+<li><strong>multipleAnswers</strong> | <code>boolean</code>: indicates whether students may select more than one answer. Note that this differs from allowMultipleAnswers in that allow makes students able to submit the question multiple times. Default: <code>false</code>.</li>
+<li><strong>title</strong> | <code>string</code>: panel title. Default: <code>&apos;Survey&apos;</code>.</li>
+<li><strong>onSubmit</strong> | <code>function</code>: function to be called when an answer is submitted. Default: <code>onSubmit() {}</code>.</li>
+<li><strong>question</strong> | <code>string</code>: string indicating the question to ask the students. Default: <code>&apos;&apos;</code>.</li>
 </ul>
 
                                 
@@ -1386,12 +1390,12 @@
 
             
                 
-                <a href="slider.html" class="navigation navigation-prev " aria-label="Previous page: Slider">
+                <a href="number-survey.html" class="navigation navigation-prev " aria-label="Previous page: Number Survey">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="unveil.md" class="navigation navigation-next " aria-label="Next page: Unveil">
+                <a href="proportions-survey.html" class="navigation navigation-next " aria-label="Next page: Proportions Survey">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1402,7 +1406,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Switch","level":"1.4.9.10","depth":3,"next":{"title":"Unveil","level":"1.4.9.11","depth":3,"path":"components/unveil.md","ref":"components/unveil.md","articles":[]},"previous":{"title":"Slider","level":"1.4.9.9","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/switch.md","mtime":"2018-10-08T01:19:58.766Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T01:20:52.730Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Muliple Choice Survey","level":"1.4.10.3","depth":3,"next":{"title":"Proportions Survey","level":"1.4.10.4","depth":3,"path":"components/proportions-survey.md","ref":"components/proportions-survey.md","articles":[]},"previous":{"title":"Number Survey","level":"1.4.10.2","depth":3,"path":"components/number-survey.md","ref":"components/number-survey.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/multiple-choice-survey.md","mtime":"2018-10-08T01:19:58.730Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T01:20:52.730Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
